--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,8 +1,13 @@
 header {
     background-color: #FFFFFF;
-    background-image: url('/logo.png');
-    background-position: 20px 0px;
-    background-repeat: no-repeat;
     height: 70px;
     width: 100%;
+    border-bottom: 1px #CCCCCC solid;
+}
+
+.logo {
+    height: 60px;
+    width: 142px;
+    margin-left: 20px;
+    background: url(../images/logo.png) no-repeat;
 }
