--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,7 +1,8 @@
 body {
-    color: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    margin: 0px;
-    padding: 0px;
+    margin:0px;
+}
+div {
+    margin: auto;
+    width: 50%;
+    padding: 25px;
 }
