--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,7 +1,7 @@
 footer {
     background-color:#00FF00;
-    height: 60px;
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
+    height:70px; width:100%;
+    text-align:center;
+    position:fixed;
+    bottom:0px;
 }
