--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,13 +1,15 @@
 header {
-    background-color: #FFFFFF;
-    height: 70px;
-    width: 100%;
+    background-color:white;
+    height:70px;
+    width:100%;
     border-bottom: 1px #CCCCCC solid;
 }
 
 .logo {
-    height: 60px;
-    width: 142px;
+    background: url("https://s3.amazonaws.com/intranet-projects-files/holbertons
+    chool-higher-level_programming+/268/logo.png") no-repeat;
+    height:60px;
+    width:142px;
     margin-left: 20px;
-    background: url(../images/logo.png) no-repeat;
+    display: block;
 }
