--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,15 +1,19 @@
 body {
-    padding: 0;
-    min-height: 100vh;
+    margin:0px;
     color: #484848;
     font-size: 14px;
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
     margin: 0px;
     padding: 0px;
 }
-
+div {
+    margin: auto;
+    width: 50%;
+    padding: 25px;
+}
 .container {
     max-width: 1000px;
-    margin: 30px 0 30px 0;
+    display: inline-block;
     width: 100%;
+    margin: 30px 0 30px 0;
 }
