--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,24 +1,55 @@
-.filters {
+.filter {
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px #DDD solid;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    padding: 10px;
 }
 
-botton {
-    border: 1px;
-    color: white;
-    font-size: 16px;
-    background-color: #FF5A5F;
+button {
+    font-size: 18px;
+    background: #FF5A5F;
     height: 48px;
     width: 20%;
     border-radius: 4px;
+    color: white;
+    margin-top: 10px;
     margin-right: 30px;
     float: right;
-    margin-top: 15px;
 }
 
-button:hover {
+botton:hover {
     opacity: 0.9;
+}
+.location {
+    width: 25%;
+    height: 100%;
+    float: left;
+    text-align: left;
+    padding-left: 50px;
+    word-wrap: break-word;
+    border-right: 1px #DDD solid;
+}
+.amenities {
+    width: 25%;
+    height: 100%;
+    float: left;
+    text-align: left;
+    padding-left: 50px;
+    display: inline-block;
+    word-wrap: break-word;
+}
+h3 {
+    font-weight: 600;
+    margin: 0px;
+    padding: 1px;
+    margin-left: 60px;
+    margin-top: 15px
+}
+h4 {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    margin-left: 60px;
 }
