--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,66 +1,89 @@
-.filters {
+.filter {
+    background-color: white;
     height: 70px;
     width: 100%;
-    border: 1px #DDD solid;
+    border: 1px solid #DDDDDD;
     border-radius: 4px;
-    padding: 10px;
 }
 
-botton {
-    border: 1px;
-    color: white;
-    font-size: 16px;
-    background-color: #FF5A5F;
+button {
+    font-size: 18px;
+    background: #FF5A5F;
     height: 48px;
     width: 20%;
     border-radius: 4px;
+    color: white;
+    margin-top: 10px;
     margin-right: 30px;
     float: right;
-    margin-top: 15px;
 }
 
-button:hover {
+botton:hover {
     opacity: 0.9;
 }
-
-.locations {
-    height: 100%;
+.location {
     width: 25%;
+    height: 100%;
     float: left;
-    position: relative;
+    text-align: left;
+    padding-left: 50px;
+    word-wrap: break-word;
     border-right: 1px #DDD solid;
 }
-
 .amenities {
-    height: 100%;
     width: 25%;
+    height: 100%;
     float: left;
-    position: relative;
+    text-align: left;
+    padding-left: 50px;
     display: inline-block;
+    word-wrap: break-word;
 }
-
 h3 {
     font-weight: 600;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 1px;
     margin-left: 60px;
     margin-top: 15px
 }
-
 h4 {
+    font-weight: 400;
+    font-size: 14px;
     margin: 0;
     padding: 0;
-    font-size: 14px;
-    font-weight: 400;
+    margin-left: 60px;
+}
+.popover {
+    border: 1px solid #DDDDDD;
+    background: #FAFAFA;
+    position: absolute;
+    display: none;
+    padding-bottom: 30px;
+    padding-left: 50px;
+    border-radius: 4px;
+    padding-top: 30px;
+    margin-top: 20px;
+    width: 80%;
+}
+.locations:hover .popover {
+    display: block;
+}
+.amenities:hover .popover {
+    display: block;
 }
 
-.popover {
-    width: 25%;
-    max-width: 250px;
-    position: absolute;
-    border-radius: 4px;
-    padding: 0 30px 30px 30px;
-    background-color: #FAFAFA;
-    border: 1px #DDD;
-    margin-top: 8px;
+.popover ul {
+    list-style-type: none;
+    margin-bottom: 20px;
+}
+.popover li {
+    position: relative;
+    list-style-type: none;
+    right: 20px;
+    margin-top: 10px;
+}
+.popover h2 {
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
